--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -1012,3 +1012,4 @@ altmetric-overrides.css:46:.singlespace + dl dd+dd {
 
 </dl>
 #+END_SRC
+** [master da672f7] started defining table and h4 -- have to worry about alignment
