--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -1020,3 +1020,4 @@ altmetric-overrides.css:46:.singlespace + dl dd+dd {
 ** [master 48a78bc] fixed division into three columns of unordered lists in screen.css
 * 16oct09
 ** [master 23325ff] adjusted the margins/padding of h2 and table
+** [master a64f096] planning to give pdf.css a huge reorganisation so commiting first
