changed h2 padding-bottom to .2em so that it scales with the font size

--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -1077,3 +1077,4 @@ For example, ~<div markdown="1" class="Footer"> </div>~
 ** [master 282c0e0] removed all the footer stuff I was experimenting with before
 ** know when to use em as a measure of size because I might want to scale the font-size up and down. I guess it makes sense for top and bottom margin/padding/border -- as the font size increases, the line spacing should also increase, but for left and right it will not :csstip:
 ** don't even bother about the footer when it comes to the PDF... that means ~display:none~
+** [master 21765a2] hide the footer since it won't appear on every single page and that information is already present in other parts of the document
