--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -1092,3 +1092,4 @@ here's an example: https://davidwalsh.name/css-page-breaks
 ** [master 40afc1d] created a class that allows the manual addition of page breaks!
 ** [master a61430b] scaled font-size up
 ** margins can overlap but padding can't?
+** [master 43a0b9c] fixed the spacing between h3 and h4 with padding -- margins didn't work so well as it overlapped with hr's margin
