--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -1094,3 +1094,5 @@ here's an example: https://davidwalsh.name/css-page-breaks
 ** margins can overlap but padding can't?
 ** [master 43a0b9c] fixed the spacing between h3 and h4 with padding -- margins didn't work so well as it overlapped with hr's margin
 ** [master b8d298d] fixed the alignment of h4 to h3 on pdf.css as well
+** [master a0ac1d4] tweak the dl properties -- dt and dd font-size -- so that they look good on pdf
+** you cannot control the margins on paper -- the margin and padding in pdf.css are for the html format too so they will only appear on the first and last page for top and bottom :csstip:
