--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -1119,3 +1119,4 @@ therefore, it needs to be scaled 11pt/8.76pt = 1.25570776256 = 126%
 ** seems like my calculations are wrong! the scaling is applied first
 12 pt * 126% * 73% = 11.0376 
 ** tested it at 11 pt and it's indeed the same font-size as 73%; perhaps why they're not the same as the page number is because the page is actually shrunk to fit the paper by wkhtmltopdf!
+** [master 834dbcb] made a new declaration for the #skills id such that instead of being placed side-by-side, they are stacked on top of each other. The new section allows #references to continue using the side-by-side layout
