--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -1120,3 +1120,4 @@ therefore, it needs to be scaled 11pt/8.76pt = 1.25570776256 = 126%
 12 pt * 126% * 73% = 11.0376 
 ** tested it at 11 pt and it's indeed the same font-size as 73%; perhaps why they're not the same as the page number is because the page is actually shrunk to fit the paper by wkhtmltopdf!
 ** [master 834dbcb] made a new declaration for the #skills id such that instead of being placed side-by-side, they are stacked on top of each other. The new section allows #references to continue using the side-by-side layout
+** [master 72b9a6c] scale font-size by 140% and fixed all the indentation problems that came with it -- the pdf version now looks very different from the html version
