--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -1172,3 +1172,4 @@ Example for wide mobile layout:
 #+END_SRC
 ** [master b05b91d] fixed alignment for wide screen layout, and removed the corresponding properties from resume.css since they're overwritten anyway
 ** [master 07b9108] added some instructions to manipulate Firefox window size in the md2rwiki.org
+** [master ff2cf84] fixed the ol width for tablet and wide mobile layout
