--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -1177,3 +1177,15 @@ Example for wide mobile layout:
 ** you can remove the padding, margin and width properties from ~resume.css~ once they are defined in ~screen.css~
 ** [master aaa140e] fixed the issues that arose after margin and width properties were removed from resume.css
 ** [master 7e1c1f4] increased dl strong width to 20% (was unset) because its default width is causing it to be presented over two lines
+** [master 0cc52a9] fixed space between the two cells (BS and PhD), line spacing of references dd, and h4+ul top margin
+** 
+#+BEGIN_SRC 
+h4 {
+    margin: 0em 0em 0em 8.8em;
+    padding: 0.5em 0 0 0;
+}
+
+h4+ul {
+    margin: -0.4em 0 0 10.7em;
+}
+#+END_SRC
